# UBGen

./: README.md  build.sh  requirements.txt  ubgen.py  ubsmith.py
dynamic_analyzer/: CMakeLists.txt
dynamic_analyzer/src/: AddBraces.cpp  AddBraces.hpp  AnalyzerInstrumenter.cpp  AnalyzerInstrumenter.hpp  ArrayIndexAdd.cpp  ArrayIndexAdd.hpp  CMakeLists.txt  IntegerAdd.cpp  IntegerAdd.hpp  RuleActionCallback.cpp  RuleActionCallback.hpp  StackToHeap.cpp  StackToHeap.hpp
dynamic_analyzer/src/tool/: CMakeLists.txt  ToolAddArrayIndex.cpp  ToolAddBraces.cpp  ToolAddInteger.cpp  ToolInstrumenter.cpp  ToolStackToHeap.cpp
dynamic_analyzer/tests/: test_all.py
dynamic_analyzer/tests/testcases/: test0.c
synthesizer/: config.py  synthesizer.py  synthesizer_test.py
synthesizer/tests/: test_bufferoverflow.py  test_dividebyzero.py  test_doublefree.py  test_integeroverflow.py  test_nullptrderef.py  test_outbound.py  test_useafterfree.py  test_useafterscope.py  test_useuninit.py
synthesizer/tests/testcases/bufferoverflow/: test10.c  test10_oracle1.c  test10_oracle2.c  test11.c  test12.c  test13.c  test1_oracle1.c  test2.c  test2_oracle1.c  test3.c  test3_oracle1.c  test4.c  test4_oracle1.c  test4_oracle2.c  test4_oracle3.c  test5.c  test5_oracle1.c  test6.c  test6_oracle1.c  test7.c  test8.c  test9.c  test9_oracle1.c
synthesizer/tests/testcases/dividebyzero/: test1.c  test1_oracle1.c  test2.c  test2_oracle1.c  test3.c  test3_oracle1.c
synthesizer/tests/testcases/doublefree/: test1.c  test1_oracle1.c  test1_oracle2.c
synthesizer/tests/testcases/integeroverflow/: test1.c  test10.c  test10_oracle1.c  test10_oracle2.c  test10_oracle3.c  test10_oracle4.c  test11.c  test1_oracle1.c  test1_oracle2.c  test2.c  test2_oracle1.c  test3.c  test3_oracle1.c  test4.c  test4_oracle1.c  test4_oracle2.c  test5.c  test5_oracle1.c  test6.c  test6_oracle1.c  test7.c  test7_oracle1.c  test8.c  test8_oracle1.c  test9.c  test9_oracle1.c
synthesizer/tests/testcases/nullptrderef/: test1.c  test1_oracle1.c  test1_oracle2.c  test1_oracle3.c  test1_oracle4.c  test1_oracle5.c  test2.c  test2_oracle1.c  test3.c  test4.c  test5.c  test5_oracle1.c  test5_oracle2.c
synthesizer/tests/testcases/outofbound/: test1.c  test1_oracle1.c  test2.c
synthesizer/tests/testcases/useafterfree/: test1.c  test1_oracle1.c  test1_oracle2.c  test2.c  test2_oracle1.c  test2_oracle2.c  test2_oracle3.c  test2_oracle4.c  test3.c  test3_oracle1.c  test3_oracle2.c  test4.c  test5.c  test5_oracle1.c
synthesizer/tests/testcases/useafterscope/: test1.c  test1_oracle1.c  test1_oracle2.c  test1_oracle3.c  test2.c  test2_oracle1.c  test2_oracle2.c  test2_oracle3.c  test3.c  test3_oracle1.c  test4.c  test5.c
synthesizer/tests/testcases/useuninit/: test1.c  test1_oracle1.c  test1_oracle2.c  test1_oracle3.c  test1_oracle4.c  test2.c  test2_oracle1.c  test2_oracle2.c  test2_oracle3.c
